Refactor Compiler class with records and type checks
Refactor Compiler class to use records for type representations and improve type completeness checks.